--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,156 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* header styles */
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 30vw;
+  border: 2px solid #f59e0b;
+  border-right: none;
+  padding: 10px 20px;
+  border-radius: 8px 0 0 8px;
+  outline: none;
+  color: #9dbfaf;
+}
+
+.searchTerm:focus {
+  color: #f59e0b;
+}
+
+.searchButton {
+  width: 50px;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #bd7802;
+  background: #f59e0b;
   text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a.active svg {
+  background-color: transparent;
+  color: #f59e0b;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/* hover style */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
+  background-color: #eaeaea;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  max-width: 40%;
+  margin: auto;
+  margin-top: 3rem;
+  padding: 3rem;
+  text-align: center;
+  box-shadow: 1px 2px 5px #00000064;
+  border-radius: 6px;
+}
+form h1 {
+  color: #f59e0b;
+  /* font-size: 1rem; */
+  margin-bottom: 20px;
+}
+form input {
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  outline: none;
+  border: none;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+form input:nth-child(2) {
+  margin-top: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+form input:last-of-type {
+  margin-bottom: 0;
+}
+
+form button {
+  padding: 0.5rem 1rem;
+  margin-top: 1rem;
+  border: none;
+  cursor: pointer;
+  background-color: #f59e0b;
+  color: #f0f0f0;
+}
+
+form button:active {
+  color: #f59e0b;
+  background-color: #f0f0f0;
+  border-radius: 3px;
+}
+form button:hover {
+  color: #f0f0f0;
+  background-color: #f59e0b;
+  border-radius: 3px;
+}
+
+small {
+  align-self: flex-start;
+  color: tomato;
+}
+
+.images {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0.8rem;
+  grid-template-rows: auto;
+}
+
+.image {
+  background-color: whitesmoke;
+  padding: 1rem;
+}
+
+.hamburger {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  form {
+    max-width: 80%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .hamburger {
+    display: block;
+  }
+
+  .desktop {
+    display: none;
+  }
+
+  .navmenu::-webkit-scrollbar {
+    width: 7px;
+  }
+
+  .navmenu::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  .navmenu::-webkit-scrollbar-thumb {
+    background-color: rgba(169, 169, 169, 0.426);
+    background-color: #f4c26b6f;
+    background-color: #7c542f6b;
+    border-radius: 20px;
+  }
+  .navmenu::-webkit-scrollbar-thumb:active {
+    background-color: #dda9507f;
+    border-radius: 20px;
   }
 }
