implemented fetching bank details

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ a.active svg {
 /* hover style */
 
 form {
-  background-color: #eaeaea;
+  background-color: #eeeeee;
   display: flex;
   flex-direction: column;
   max-width: 40%;
