faq and responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 }
 
 .searchTerm {
-  width: 30vw;
+  width: 100%;
   border: 2px solid #f59e0b;
   border-right: none;
   padding: 10px 20px;
@@ -69,7 +69,7 @@ small {
 
 @media screen and (max-width: 768px) {
   .hamburger {
-    display: block;
+    display: flex;
   }
 
   .desktop {
@@ -113,3 +113,39 @@ small {
     display: none;
   }
 }
+
+@media screen and(min-width: 799px) {
+  .searchTerm {
+    width: 50rem;
+    display: none;
+    border: 2px solid #f59e0b;
+    border-right: none;
+    padding: 10px 20px;
+    border-radius: 8px 0 0 8px;
+    outline: none;
+    color: #9dbfaf;
+  }
+    /* .searchbar-double{
+      background: #000;
+    flex: 1;
+    display: none;
+    width: 10vw;
+    justify-items: center;
+  } */
+}
+
+@media screen and (min-width: 0) and (max-width: 800px) {
+    .searchbar-main{
+    display: none;
+  }
+}
+
+@media screen and (min-width: 0) and (max-width: 700px) {
+  
+
+}
+
+.saerchbar-main{
+  width: 30vw;
+}
+
