i made the home page responsive

--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,8 @@ small {
 }
 
 .image {
-  background-color: whitesmoke;
-  padding: 1rem;
+  /* background-color: whitesmoke; */
+  /* padding: 5rem; */
 }
 
 .hamburger {
